[package]
name = "http-ping"
version = "0.1.0"
edition = "2021"
description = "A simple tool to ping HTTP servers and return a HTTP code"
authors = ["BillyRayValentine <github.com/billyrayvalentine>"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
req = "0.6.2"
ureq = "2.10.1"
url = "2.5.3"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
